remove link from arches section

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 				  	<div class="col-sm-6 col-md-6">
 
 						<p><span>When You Arrive</span></p>
-				  		<p><a href="https://www.nps.gov/arch/planyourvisit/gettingaround.htm" target="_blank">Getting Around the Park</a>: Most visits to Arches involve traveling by vehicle along the scenic drive, which provides access to many viewpoints and trailheads. Some times of year—or even times of day—are far busier than others. Check the Traffic and <a href="https://www.nps.gov/arch/planyourvisit/traffic.htm" target="_blank">Travel Trips page</a> for suggestions on avoiding the crowds. Road construction may cause delays or closures during your visit.</p>
+				  		<p>Most visits to Arches involve traveling by vehicle along the scenic drive, which provides access to many viewpoints and trailheads. Some times of year—or even times of day—are far busier than others. Check the Traffic and <a href="https://www.nps.gov/arch/planyourvisit/traffic.htm" target="_blank">Travel Trips page</a> for suggestions on avoiding the crowds. Road construction may cause delays or closures during your visit.</p>
 				   	</div>
 				  	<div class="col-sm-6 col-md-6">
 				  		<div class="map-responsive">
